--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "iterations": 524288,
+  "iterations": 65536,
   "gridWidth": 512,
   "gridHeight": 512,
   "threadsPerBlockX": 32,
@@ -10,18 +10,24 @@
 
   "L": 1.0,
   "sigma": 0.05,
-  "x0": 0.0,
-  "y0": 0.0,
+  "x0": 0.15,
+  "y0": 0.15,
   "kx": 1.5,
   "ky": 0.0,
   "amp": 1.0,
-  "trapStr": 200000.0,
+  "trapStr": 8000000.0,
 
   "obstacleX": -0.05,
   "obstacleY": 0,
   "obstacleSigma": 0.01,
   "obstacleHeight": 100000,
 
-  "dt": 0.0000002,
-  "g": 3000.0
+  "V_bias": 500,
+  "r_0": 0.1,
+  "sigma2": 0.05,
+  "absorbStrength": 10e8,
+  "absorbWidth": 0.025,
+
+  "dt": 6e-8,
+  "g": 10e1
 }
