--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
+black==25.11.0
+click==8.3.1
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.60.1
 imageio==2.37.2
 imageio-ffmpeg==0.6.0
+iniconfig==2.3.0
 kiwisolver==1.4.9
 matplotlib==3.10.7
+mypy-extensions==1.1.0
 numpy==2.3.5
 packaging==25.0
+pathspec==0.12.1
 pillow==12.0.0
+platformdirs==4.5.0
+pluggy==1.6.0
 psutil==7.1.3
+pygments==2.19.2
 pyparsing==3.2.5
+pytest==9.0.1
 python-dateutil==2.9.0.post0
+pytokens==0.3.0
 six==1.17.0
